fixing issue where text and links were unreadable when placed in slider region #1395

--- a/themes/curise/css/rise-styles.css
+++ b/themes/curise/css/rise-styles.css
@@ -36,9 +36,10 @@ body { background-color: #1e1e1e; }
 
 #intro-wide-wrapper, #post-wide-wrapper { background-color: #fff; }
 
-.banner-dark #slider-wrapper { background-color: #333; }
+.banner-dark .slider-wrapper { background-color: #333; color: #fff; }
+.banner-dark .slider-wrapper a:link, .banner-dark .slider-wrapper a:visited { color: #cfb87c; }
 
-.banner-light #slider-wrapper { background-color: #f2f2f2; }
+.banner-light .slider-wrapper { background-color: #f2f2f2; }
 
 .page-title-image-wide { margin-top: 0; padding-top: 0; }
 
